route-ui-lights working

--- a/elements/route-ui-message/route-ui-message.html
+++ b/elements/route-ui-message/route-ui-message.html
@@ -20,7 +20,7 @@ license that can be found in the LICENSE file.
  * @class route-ui-message
  */
 -->
-<link rel="import" href="../components/polymer/polymer.html">
+<link rel="import" href="../../components/polymer/polymer.html">
 
 <polymer-element name="route-ui-message">
   <template>
