--- a/elements/route-app.html
+++ b/elements/route-app.html
@@ -4,6 +4,7 @@
 <link rel="import" href="route-tile-layout/route-tile-layout.html">
 <link rel="import" href="route-ui-tile/route-ui-tile.html">
 <link rel="import" href="route-ui-lights/route-ui-lights.html">
+<link rel="import" href="route-messenger.html">
 
 <polymer-element name="route-app" attributes="">
   <template>
@@ -11,14 +12,16 @@
 
     <!-- <polymer-page></polymer-page> -->
 
+    <route-messenger id="messenger"></route-messenger>
+
     <div id="page">
       <polymer-flex-layout></polymer-flex-layout>
 
       <div style="position: relative" flex>
         <section id="tiles">
           <route-tile-layout id="tileLayout" layout="{{layout}}"></route-tile-layout>
-          <route-ui-lights></route-ui-lights>
-          <route-ui-tile></route-ui-tile>
+          <route-ui-lights messenger="{{$.messenger.socket}}" lights="(1|2)" name="Lights"></route-ui-lights>
+          <route-ui-lights messenger="{{$.messenger.socket}}" lights="(3)" name="Lamp"></route-ui-lights>
           <route-ui-tile></route-ui-tile>
           <route-ui-tile></route-ui-tile>
           <route-ui-tile></route-ui-tile>
