--- a/elements/route-ui-lights/route-ui-lights.html
+++ b/elements/route-ui-lights/route-ui-lights.html
@@ -23,22 +23,26 @@ license that can be found in the LICENSE file.
 <link rel="import" href="../route-ui-tile/route-ui-tile.html">
 <link rel="import" href="../route-ui-message/route-ui-message.html">
 
-<polymer-element name="route-ui-lights" attributes="">
+<polymer-element name="route-ui-lights" attributes="messenger lights name">
   <template>
     <link rel="stylesheet" href="route-ui-lights.css">
+
     <route-ui-message id="message">
       <polymer-flex-layout vertical></polymer-flex-layout>
       <div flex></div>
       <div>{{brightness}}</div>
       <div flex></div>
     </route-ui-message>
-    <route-ui-tile id="tile" autofire autofireInterval="300">
-      <polymer-flex-layout vertical></polymer-flex-layout>
-      <div flex></div>
-      <div style="height: 128px;">
-        <polymer-flex-layout></polymer-flex-layout>
+
+    <route-ui-tile id="tile" autofire autofireInterval="300"
+        on-route-ui-tile-top="{{topHandler}}" on-route-ui-tile-bottom="{{bottomHandler}}"
+        on-route-ui-tile-center="{{centerHandler}}" on-route-ui-tile-release="{{update}}">
+
+      <div style="height: 100%">
+        <polymer-flex-layout vertical></polymer-flex-layout>
+
         <div flex></div>
-        <div style="width: 128px; position: relative;">
+        <div style="width: 128px; height: 128px; margin: auto;position: relative;">
           <div class="left">Hue</div>
           <div class="right">Hue</div>
           <div class="top">Bright</div>
@@ -52,7 +56,7 @@ license that can be found in the LICENSE file.
         </div>
         <div flex></div>
       </div>
-      <div flex></div>
+
     </route-ui-tile>
   </template>
   <script>
@@ -61,20 +65,42 @@ license that can be found in the LICENSE file.
       lights: null,
 
       brightness: 0,
+      state: false,
 
-      ready: function() {
-        this.$.tile.addEventListener("route-ui-tile-top", this.topHandler.bind(this));
-        this.$.tile.addEventListener("route-ui-tile-bottom", this.bottomHandler.bind(this));
-        this.$.tile.addEventListener("route-ui-tile-center", this.centerHandler.bind(this));
-      },
-      centerHandler: function() {
+      attached: function() {
+        this.messenger.on("Hue.LightInfo", function(data) {
+          for(key in data) {
+            if(data.hasOwnProperty(key) && key != "stateUpdatedTime") {
+              var light = data[key];
+              if(light.name.match(this.lights)) {
+                var brightness = Math.floor(light.state.bri * 20 / 255) * 5,
+                    state = light.state.on;
+                this.brightness = Math.max(this.brightness, brightness);
+                this.state = this.state || state;
+              }
+            }
+          }
+          this.update();
+        }.bind(this));
 
+        this.messenger.emit("getState", "Hue.LightInfo");
       },
-      topHandler: function() {
+      update: function() {
+        this.messenger.emit("DeviceEvent", "SetLights", {
+          bulbName: this.lights,
+          bri: this.brightness / 100,
+          state: this.state,
+          duration: 0.5,
+        });
+      },
+      centerHandler: function(event, detail, sender) {
+        this.state = !this.state;
+      },
+      topHandler: function(event, detail, sender) {
         this.brightness = Math.min(100, this.brightness + 5);
         this.$.message.show();
       },
-      bottomHandler: function() {
+      bottomHandler: function(event, detail, sender) {
         this.brightness = Math.max(0, this.brightness - 5);
         this.$.message.show();
       },
