--- a/elements/route-messenger.html
+++ b/elements/route-messenger.html
@@ -7,7 +7,7 @@
     (function() {
       Polymer("route-messenger", {
         ready: function() {
-          this.socket = io.connect('http://10.1.1.59');
+          this.socket = io.connect('http://' + location.host);
           this.socket.on("connect", function() {
             console.log("Connected!");
           });
