Switched sleep delay back to 60s

--- a/elements/route-app.html
+++ b/elements/route-app.html
@@ -17,7 +17,7 @@
 
     <polymer-page></polymer-page>
 
-    <route-power-manager id="powerManager" sleepdelay="3000" auto
+    <route-power-manager id="powerManager" auto
         on-route-sleep="{{sleep}}" on-route-wake="{{wake}}">
     </route-power-manager>
 
