Moving to more packaged elements

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700|Roboto+Condensed:400,300' rel='stylesheet' type='text/css'>
+
   <script type="text/javascript" src="components/platform/platform.js"></script>
-  <link rel="import" href="elements/route-app.html" />
+  <link rel="import" href="elements/route-app/route-app.html" />
 </head>
 
 <body>
