--- a/elements/route-app/route-app.html
+++ b/elements/route-app/route-app.html
@@ -1,19 +1,19 @@
-<link rel="import" href="../components/polymer/polymer.html">
-<link rel="import" href="../components/polymer-page/polymer-page.html">
-<link rel="import" href="../components/polymer-flex-layout/polymer-flex-layout.html">
-<link rel="import" href="../components/polymer-ui-pages/polymer-ui-pages.html">
-<link rel="import" href="route-tile-layout/route-tile-layout.html">
-<link rel="import" href="route-ui-tile/route-ui-tile.html">
-<link rel="import" href="route-messenger.html">
-<link rel="import" href="route-power-manager/route-power-manager.html">
-<link rel="import" href="route-ui-lockscreen/route-ui-lockscreen.html">
-<link rel="import" href="route-ui-lights/route-ui-lights.html">
-<link rel="import" href="route-ui-media/route-ui-media.html">
-<link rel="import" href="route-ui-power/route-ui-power.html">
+<link rel="import" href="../../components/polymer/polymer.html">
+<link rel="import" href="../../components/polymer-page/polymer-page.html">
+<link rel="import" href="../../components/polymer-flex-layout/polymer-flex-layout.html">
+<link rel="import" href="../../components/polymer-ui-pages/polymer-ui-pages.html">
+<link rel="import" href="../route-tile-layout/route-tile-layout.html">
+<link rel="import" href="../route-ui-tile/route-ui-tile.html">
+<link rel="import" href="../route-socket/route-socket.html">
+<link rel="import" href="../route-power-manager/route-power-manager.html">
+<link rel="import" href="../route-ui-lockscreen/route-ui-lockscreen.html">
+<link rel="import" href="../route-ui-lights/route-ui-lights.html">
+<link rel="import" href="../route-ui-media/route-ui-media.html">
+<link rel="import" href="../route-ui-power/route-ui-power.html">
 
 <polymer-element name="route-app" attributes="">
   <template>
-    <link rel="stylesheet" href="css/route-app.css">
+    <link rel="stylesheet" href="route-app.css">
 
     <polymer-page></polymer-page>
 
@@ -21,7 +21,7 @@
         on-route-sleep="{{sleep}}" on-route-wake="{{wake}}">
     </route-power-manager>
 
-    <route-messenger id="messenger"></route-messenger>
+    <route-socket id="socket"></route-socket>
 
     <polymer-ui-pages valueattr="id" selected="{{page}}">
 
@@ -31,9 +31,9 @@
         <div style="position: relative" flex>
           <section id="tiles">
             <route-tile-layout id="tileLayout" layout="{{layout}}"></route-tile-layout>
-            <route-ui-lights messenger="{{$.messenger.socket}}" lights="(1|2)" name="Lights"></route-ui-lights>
-            <route-ui-lights messenger="{{$.messenger.socket}}" lights="(3)" name="Lamp"></route-ui-lights>
-            <route-ui-media messenger="{{$.messenger.socket}}"></route-ui-media>
+            <route-ui-lights messenger="{{$.socket}}" lights="(1|2)" name="Lights"></route-ui-lights>
+            <route-ui-lights messenger="{{$.socket}}" lights="(3)" name="Lamp"></route-ui-lights>
+            <route-ui-media messenger="{{$.socket}}"></route-ui-media>
             <route-ui-power></route-ui-power>
             <route-ui-tile></route-ui-tile>
             <route-ui-tile></route-ui-tile>
