Moved image search into its own module

--- a/elements/route-ui-media/route-ui-media.html
+++ b/elements/route-ui-media/route-ui-media.html
@@ -14,7 +14,7 @@
 -->
 <link rel="import" href="../../components/polymer/polymer.html">
 <link rel="import" href="../route-ui-tile/route-ui-tile.html">
-<link rel="import" href="../polymer-image-search.html">
+<link rel="import" href="../polymer-image-search/polymer-image-search.html">
 
 <polymer-element name="route-ui-media" attributes="messenger">
   <template>
