--- a/elements/polymer-image-search/polymer-image-search.html
+++ b/elements/polymer-image-search/polymer-image-search.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../components/polymer/polymer.html">
-<link rel="import" href="../components/polymer-google-jsapi/polymer-google-jsapi.html">
+<link rel="import" href="../../components/polymer/polymer.html">
+<link rel="import" href="../../components/polymer-google-jsapi/polymer-google-jsapi.html">
 
 <polymer-element name="polymer-image-search" attributes="query">
   <template>
