--- a/elements/route-app/route-app.html
+++ b/elements/route-app/route-app.html
@@ -10,6 +10,7 @@
 <link rel="import" href="../route-ui-lights/route-ui-lights.html">
 <link rel="import" href="../route-ui-media/route-ui-media.html">
 <link rel="import" href="../route-ui-power/route-ui-power.html">
+<link rel="import" href="../route-ui-alarm/route-ui-alarm.html">
 
 <polymer-element name="route-app" attributes="">
   <template>
@@ -35,7 +36,7 @@
             <route-ui-lights messenger="{{$.socket}}" lights="(3)" name="Lamp"></route-ui-lights>
             <route-ui-media messenger="{{$.socket}}"></route-ui-media>
             <route-ui-power></route-ui-power>
-            <route-ui-tile></route-ui-tile>
+            <route-ui-alarm messenger="{{$.socket}}"></route-ui-alarm>
             <route-ui-tile></route-ui-tile>
           </section>
         </div>
