--- a/elements/route-ui-power/route-ui-power.html
+++ b/elements/route-ui-power/route-ui-power.html
@@ -15,6 +15,7 @@
 <link rel="import" href="../../components/polymer/polymer.html">
 <link rel="import" href="../../components/polymer-flex-layout/polymer-flex-layout.html">
 <link rel="import" href="../route-power-manager/route-power-manager.html">
+<link rel="import" href="../route-ui-tile/route-ui-tile.html">
 
 <polymer-element name="route-ui-power" attributes="">
   <template>
